fixing spacing for calculator page

--- a/styles/calculator.css
+++ b/styles/calculator.css
@@ -152,21 +152,62 @@ body {
   }
 }
 
-/*calculator button*/ 
-  a:hover {
-    background-color: rgb(99, 99, 99);
-  }
+.container-2 {
 
-.button {
-    background-color: #234876; 
-    text-align: center;
-    border-radius: 20px;
-    width: 80px;
-    border: none;
-    color: white;
-    padding: 15px 32px;
-    text-align: center;
-    text-decoration: none;
-    display: inline-block;
-    font-size: 16px;
+  display: grid;
+  justify-content: center;
+  align-self: center;
+  padding: 60px 40px 30px 40px;
+  max-width: 1000px;
+  margin: auto;
+
+}
+
+.button1 {
+  
+  display: block;
+  text-align: center;
+  border-radius: 20px;
+  padding: 10px;
+  margin: 20px;
+  background-color: #234876;
+  color: white;
+  width: 140px;
+  height: auto;
+}
+
+.button2 {
+  display: block;
+  text-align: center;
+  border-radius: 20px;
+  padding: 10px;
+  margin: 20px;
+  background-color: #234876;
+  color: white;
+  width: 140px;
+  height: auto;
+}
+
+.button3 {
+  display: block;
+  text-align: center;
+  border-radius: 20px;
+  padding: 10px;
+  margin: 20px;
+  background-color: #234876;
+  color: white;
+  width: 140px;
+  height: auto;
+}
+
+.button1:hover {
+  background-color: grey;
+}
+
+.button2:hover {
+  background-color: grey;
+}
+
+.button3:hover {
+  background-color: grey;
 }
